--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -191,7 +191,7 @@ services:
       - 7040:3001
     env_file: ./docker-compose-config/gate/config/gate.env
     volumes:
-      - ./docker-compose-config/gate/volumes/config.ts:/src/config/index.ts
+      - ./docker-compose-config/gate/volumes/config.js:/src/config/index.js
     depends_on:
       - search
       - read-service
