--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -76,6 +76,7 @@ services:
       - elasticsearch
     volumes:
       - ./docker-compose-config/monstache/config/config.toml:/app/config.toml
+      - ./docker-compose-config/monstache/config/scripts:/app/scripts
     networks: 
       - my-network
 
