--- a/docker-compose-config/gate/config/gate.env
+++ b/docker-compose-config/gate/config/gate.env
@@ -1,5 +1,5 @@
 PORT=3001
 ELASTIC_SERVICE=http://search:9001
 READ_SERVICE=http://read-service:8000
-WRITE_SERVICE=http://write-service:4000
+WRITE_SERVICE=http://120.0.0.1:4000
 IS_AUTH=false
