--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "env-var": "^7.0.1",
     "express": "^4.17.1",
     "helmet": "^4.6.0",
+    "http": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "qs": "^6.10.1"
@@ -31,10 +32,10 @@
     "@types/morgan": "^1.9.2",
     "@types/node": "^14.11.2",
     "copyfiles": "^2.4.1",
-    "jest": "^26.4.2",
+    "jest": "^26.6.3",
     "nodemon": "^2.0.9",
-    "supertest": "^6.1.3",
+    "supertest": "^6.1.6",
     "ts-jest": "^26.4.0",
-    "typescript": "^4.0.3"
+    "typescript": "^4.4.3"
   }
 }
