--- a/docker-compose-config/gate/config/gate.env
+++ b/docker-compose-config/gate/config/gate.env
@@ -2,4 +2,6 @@ PORT=3001
 ELASTIC_SERVICE=http://search:9001
 READ_SERVICE=http://read-service:8000
 WRITE_SERVICE=http://write-service:4000
+KARTOFFEL_AUD=kartoffel
 IS_AUTH=false
+REQUIRED_SCOPES=write,read
