--- a/docker-compose-config/populate-kartoffel/config/populate-kartoffel.env
+++ b/docker-compose-config/populate-kartoffel/config/populate-kartoffel.env
@@ -16,6 +16,7 @@ ORGANIZATION_GROUP_COLLECTION_NAME=groups
 DIGITAL_IDENTITY_COLLECTION_NAME=digitalidentities
 ENTITY_COLLECTION_NAME=entities
 ROLE_COLLECTION_NAME=roles
+ERRORS_COLLECTION_NAME=errorsMonitor
 
 #rabbit
 RABBIT_URI=amqp://rabbit
@@ -26,4 +27,11 @@ IS_MOCK=false
 
 #config
 PORT=3001
-IS_RECOVERY_SCRIPT=false
+PREFETCH_AMOUNT=20
+API_PASSWORD=password123
+RETRIES=10
+
+#picture
+BASE_URL=http://localhost/
+URL_SUFFIX=pictures/profile
+
