--- a/docker-compose-config/read-service/config/read-service.env
+++ b/docker-compose-config/read-service/config/read-service.env
@@ -7,3 +7,18 @@ OG_COLLECTION_NAME=denormalizedOrganizationGroup
 
 ENTITY_COLLECTION_NAME=denormalizedEntity
 DI_COLLECTION_NAME=denormalizedDigitalIdentity
+
+MIN_PAGE_SIZE=50
+MAX_PAGE_SIZE=1000
+
+ROOT_USERNAME=dev
+ROOT_PASSWORD=pass
+ROOT_DATABASE=genesis
+
+S3_URL=localhost:1234
+REGION=us
+ACCESS_KEY=dasdsadas
+SECRET_ACCESS_KEY=ewrtewa
+PROFILES_BUCKET_NAME=profs
+
+ALIASES='{"NON_EXTERNAL_SOURCES": ["aka","es_name","ads_name","adNN_name","nvSQL_name","lmn_name","mdn_name","mm_name","sf_name"]}'
