feat: noam changes in in read

--- a/docker-compose-config/populate-kartoffel/config/populate-kartoffel.env
+++ b/docker-compose-config/populate-kartoffel/config/populate-kartoffel.env
@@ -3,7 +3,7 @@ MONGO_PROTOCOL=mongodb://
 MONGO_URN=mongo-primary:27017,mongo-secondary:27018/kartoffelMock?replicaSet=rs0
 
 DB_NAME=kartoffelMock
-
+BASE_URL=
 MONGODB_USER_NAME=nitro
 MONGODB_PASSWORD=password123
 
@@ -27,3 +27,6 @@ IS_MOCK=false
 #config
 PORT=3001
 IS_RECOVERY_SCRIPT=false
+#pictures
+BASE_URL=http://localhost
+URL_SUFFIX=pictures/profile
