add: env aliases to search

--- a/docker-compose-config/search/config/search_docker.env
+++ b/docker-compose-config/search/config/search_docker.env
@@ -19,3 +19,4 @@ INDEX_ENTITY=kartoffelmock.denormalizedentity
 INDEX_GROUPS=kartoffelmock.denormalizedorganizationgroup
 INDEX_ROLES=kartoffelmock.denormalizedrole
 INDEX_DIGITALIDENTITY=kartoffelmock.denormalizeddigitalidentity
+ALIASES='{"NON_EXTERNAL_SOURCES": ["aka","es_name","ads_name","adNN_name","nvSQL_name","lmn_name","mdn_name","mm_name","sf_name"], "TEST": ["aka"]}'
