--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     "dotenv": "^10.0.0",
     "env-var": "^7.0.1",
     "express": "^4.17.1",
+    "fs": "0.0.1-security",
     "helmet": "^4.6.0",
     "http": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
-    "qs": "^6.10.1"
+    "path": "^0.12.7",
+    "qs": "^6.10.1",
+    "readline": "^1.3.0"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.0",
