--- a/docker-compose-config/gate/config/gate.env
+++ b/docker-compose-config/gate/config/gate.env
@@ -5,3 +5,5 @@ WRITE_SERVICE=http://write-service:4000
 KARTOFFEL_AUD=kartoffel
 IS_AUTH=false
 REQUIRED_SCOPES=write,read
+APM_SECRET_TOKEN=nothing
+APM_SERVER=http://apm-server:8200
